[tool.poetry]
name = "langchan llm app"
version = "0.1.0"
description = "It is the pilot project for langchain"
authors = ["Gaurav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.6"
fastapi = "^0.111.0"
langserve = {extras = ["all"], version = "^0.1.1"}
langchain-community = "^0.0.38"
faiss-cpu = "^1.8.0"
langchain-text-splitters = "^0.0.1"
langchain = "^0.1.20"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
