[tool.poetry]
name = "langchan llm app"
version = "0.1.0"
description = "It is the pilot project for langchain"
authors = ["Gaurav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.6"
fastapi = "^0.111.0"
langserve = {extras = ["all"], version = "^0.1.1"}
langchain-community = "^0.0.38"
langchainhub = "^0.1.15"
httpx = "^0.27.0"
gql = "^3.5.0"
requests-toolbelt = "^1.0.0"
stackapi = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
